third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/spec_inlining.exp
module 0x42::Test {
    fun apply(v: u64, predicate: |u64|(bool)): bool {
        predicate(v)
    }
    public fun test_apply(x: u64) {
        if (!apply(x, |arg0| __lambda__1__test_apply(arg0))) abort 1;
        if (!apply(x, |arg0| __lambda__2__test_apply(arg0))) abort 2;
    }
    fun __lambda__1__test_apply(v: u64): bool {
        v >= 0
    }
    fun __lambda__2__test_apply(v: u64): bool {
        v != 0
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid name
  ┌─ spec_inlining.move:9:9
  │
9 │     fun __lambda__1__test_apply(v: u64): bool {
  │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid function name '__lambda__1__test_apply'. Function names cannot start with '_'

error: invalid name
   ┌─ spec_inlining.move:12:9
   │
12 │     fun __lambda__2__test_apply(v: u64): bool {
   │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid function name '__lambda__2__test_apply'. Function names cannot start with '_'
